aws/accounts/personal/us_east_1/applications/k3s/argocd/manifests/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
spec:
  ingressClassName: traefik
  rules:
    - host: argocd-k3s.vinny.dev.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
  tls:
    - hosts:
        - aargocd-k3s.vinny.dev.br
      secretName: argocd-k3s-tls
