aws/accounts/personal/us_east_1/applications/k3s/argocd/manifests/argocd/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/target: ${TRAEFIK_NLB_HOSTNAME}
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd-k3s.vinny.dev.br`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: argocd-k3s-tls
